HIVE-26473: Hive JDK-17 support for compile and runtime (#5404)
Co-authored-by: kokila-19 <kokilanarayanan95@gmail.com>
Co-authored-by: Tanishq Chugh <tanishqchugh4142@gmail.com>
(cherry picked from commit 413069ea0faeb893fe78faa215b08a70ece80595)
Change-Id: Icea3628d575d868c784719c433adc1af4de799d9